--- a/.github/workflows/firebase-hosting-pull-request.yml
+++ b/.github/workflows/firebase-hosting-pull-request.yml
@@ -3,8 +3,8 @@
 
 name: Deploy to Firebase Hosting on PR
 'on': pull_request
-env: VITE_IMAGE_API_KEY='${{secrets.VITE_IMAGE_API_KEY}}'
-    VITE_KAKAO_API_KEY='${{secrets.VITE_KAKAO_API_KEY}}'
+env: VITE_IMAGE_API_KEY=${{secrets.VITE_IMAGE_API_KEY}}
+    VITE_KAKAO_API_KEY=${{secrets.VITE_KAKAO_API_KEY}}
 jobs:
     build_and_preview:
         if: '${{ github.event.pull_request.head.repo.full_name == github.repository }}'
