--- a/.github/workflows/firebase-hosting-merge.yml
+++ b/.github/workflows/firebase-hosting-merge.yml
@@ -6,8 +6,10 @@ name: Deploy to Firebase Hosting on merge
     push:
         branches:
             - main
-env: VITE_IMAGE_API_KEY=${{secrets.VITE_IMAGE_API_KEY}}
-    VITE_KAKAO_API_KEY=${{secrets.VITE_KAKAO_API_KEY}}
+env:
+    VITE_IMAGE_API_KEY: ${{ secrets.VITE_IMAGE_API_KEY }}
+    VITE_KAKAO_API_KEY: ${{ secrets.VITE_KAKAO_API_KEY }}
+
 jobs:
     build_and_deploy:
         runs-on: ubuntu-latest
