--- a/package.json
+++ b/package.json
@@ -11,9 +11,13 @@
   },
   "dependencies": {
     "axios": "^1.4.0",
+    "date-fns": "^2.30.0",
     "firebase": "^10.3.0",
     "react": "^18.2.0",
+    "react-datepicker": "^4.16.0",
+    "react-daum-postcode": "^3.1.3",
     "react-dom": "^18.2.0",
+    "react-modal": "^3.16.1",
     "react-router-dom": "^6.15.0",
     "styled-components": "^6.0.7"
   },
